go, metadata: Refactor, uncomment compose, add env's for swagger
